# socket.io-client-cpp

./: CMakeLists.txt  LICENSE  README.md  package-lock.cmake
.github/workflows/: cmake-multi-platform.yml
cmake/: Config.cmake.in
include/sioclient/: sio_client.h  sio_socket.h
src/: sio_client.cpp  sio_client.h  sio_client_impl.cpp  sio_client_impl.h  sio_message.cpp  sio_message.h  sio_packet.cpp  sio_packet.h  sio_socket.cpp  sio_socket.h
src/internal/: sio_client_impl.cpp  sio_client_impl.h  sio_packet.cpp  sio_packet.h
test/: CMakeLists.txt  sio_test.cpp
test/echo_server/: package-lock.json  package.json
